--- a/test/Makefile
+++ b/test/Makefile
@@ -1,9 +1,9 @@
-ALGNAMES := Mosaic Binarize SortArray
+ALGNAMES := Image Mosaic Binarize SortArray
 			
 INCFILES := ErrorCode.h $(addsuffix .h, $(ALGNAMES))
 OBJFILES := main.o $(addsuffix .o, $(ALGNAMES))
 
-EXEFILE  := okanoexec
+EXEFILE  := exec
 
 NVCCCMD  := nvcc
 NVCCFLAG := -arch=sm_20
@@ -12,7 +12,7 @@ NVLDFLAG := -lnppi
 world: $(EXEFILE)
 
 $(EXEFILE): $(OBJFILES)
-	$(NVCCCMD) $(OBJFILES) Image.o  -o $(EXEFILE) $(NVLDFLAG)
+	$(NVCCCMD) $(OBJFILES)  -o $(EXEFILE) $(NVLDFLAG)
 
 $(OBJFILES): %.o:%.cu $(INCFILES)
 	$(NVCCCMD) -c $(filter %.cu, $<) -o $@ $(NVCCFLAG)
