--- a/okano_3_0/config
+++ b/okano_3_0/config
@@ -8,7 +8,7 @@ PROJECT_NAME           = OpenCUDA
 PROJECT_NUMBER         = 
 PROJECT_BRIEF          = 
 PROJECT_LOGO           = 
-OUTPUT_DIRECTORY       = doc
+OUTPUT_DIRECTORY       = ../doc
 CREATE_SUBDIRS         = NO
 ALLOW_UNICODE_NAMES    = NO
 OUTPUT_LANGUAGE        = Chinese
